--- a/movie-details.html
+++ b/movie-details.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/spinner.css" />
     <script src="js/script.js" defer></script>
-    <title>Flixx | Movie Details</title>
+    <title>Flixx</title>
   </head>
   <body>
     <header class="main-header">
