--- a/search.html
+++ b/search.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/spinner.css" />
     <script src="js/script.js" defer></script>
-    <title>Flixx | Search Movies & Shows</title>
+    <title>Flixx</title>
   </head>
   <body>
     <header class="main-header">
